# pdf-diff-desktop

./: .gitignore  Makefile
PdfDiffApp/: project.yml
PdfDiffApp/PdfDiff/: DesignTokens.swift  Info.plist  PdfDiffApp.swift
PdfDiffApp/PdfDiff.xcodeproj/: project.pbxproj
PdfDiffApp/PdfDiff/Models/: BatchComparison.swift  DetectedBarcode.swift  InspectionResult.swift  PreflightResult.swift
PdfDiffApp/PdfDiff/Services/: AIAnalysisService.swift  BarcodeDetectionService.swift  KeychainHelper.swift  MockPDFService.swift  (+5 more)
docs/plans/: 2026-02-25-pdf-diff-desktop-design.md  2026-02-25-pdf-diff-implementation-plan.md  2026-02-26-ai-analysis-design.md  2026-02-26-ai-analysis-implementation-plan.md  2026-02-26-compare-ux-improvements-design.md  2026-02-26-compare-ux-improvements-implementation-plan.md  2026-02-26-ux-redesign-design.md  2026-02-26-ux-redesign-implementation-plan.md  2026-02-27-ai-inspection-design.md  2026-02-27-ai-inspection-implementation-plan.md  2026-02-27-modern-ui-design.md  2026-02-27-modern-ui-implementation-plan.md  2026-02-27-v1-feature-roadmap-design.md  2026-02-27-v1-feature-roadmap-implementation-plan.md  2026-03-02-improvements-roadmap-design.md
rust-core/: Cargo.toml
rust-core/src/: error.rs  lib.rs  types.rs
rust-core/src/diff/: mod.rs  pixel.rs  structural.rs
rust-core/src/engine/: mod.rs  mupdf_engine.rs  traits.rs
rust-core/src/preflight/: ink_coverage.rs  mod.rs  page_checks.rs  separations.rs
rust-core/tests/: mupdf_engine_test.rs  pixel_diff_test.rs  preflight_test.rs  structural_diff_test.rs
rust-core/tests/helpers/: mod.rs
(+40 files in other folders)
