[package]
name = "pdf-diff-core"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["lib", "staticlib"]

[dependencies]
uniffi = { version = "0.29", features = ["cli"] }
mupdf = "0.6"
thiserror = "2"

[build-dependencies]
uniffi = { version = "0.29", features = ["build"] }

[[bin]]
name = "uniffi-bindgen"
path = "uniffi-bindgen.rs"
