[package]
name = "pdf-diff-core"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["lib", "staticlib", "cdylib"]

[dependencies]
uniffi = { version = "0.29", features = ["cli"] }
mupdf = "0.6"
thiserror = "2"

[build-dependencies]
uniffi = { version = "0.29", features = ["build"] }

[dev-dependencies]
printpdf = "0.8"
tempfile = "3"

[[bin]]
name = "uniffi-bindgen"
path = "uniffi-bindgen.rs"
